welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:3: error: type mismatch;
 found   : Unit
 required: Boolean
	if ((0<= nums.length && nums.length <= 9) && (nums(4)=9)) {
                                                             ^